[project]
name = "neuroninstanceseg"
version = "1.0.1"
requires-python = ">=3.8"
# dependencies = [ 
#     "imgaug==0.4.0",
#     "keras==2.4.3", # Recommended: 2.3.1
#     "numpy==1.19.5",
#     "py-opencv", # Recommended: opencv_contrib_python 4.6.0.66
#     "pandas==1.1.5", # Recommended: 1.1.5
#     "scikit-image==0.17.2",
#     "scipy==1.9.1", # Recommended: 1.1.0
#     "tensorflow==2.4.0",
#     "tqdm==4.56.0"
# ]

[project.scripts]
train_efficient_b5="neuroninstanceseg.train_efficient_b5:main"
predict_efficient_b5="neuroninstanceseg.predict_efficient_b5:main"
postprocessing="neuroninstanceseg.postprocessing:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuroninstanceseg"]
sources = ["src"]
exclude = [ "/.gitignore",
            "/*.toml" ]

[tool.hatch.build.targets.sdist]
packages = ["src/neuroninstanceseg"]

# +--------------------------------------------------------------------+
# | Pixi tool configuration
# +--------------------------------------------------------------------+
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

# [tool.pixi.activation]
# env = { XLA_FLAGS="--xla_gpu_cuda_data_dir=$PIXI_PROJECT_ROOT/.pixi/envs/$PIXI_ENVIRONMENT_NAME", TF_XLA_FLAGS="--tf_xla_enable_xla_devices", SSL_CERT_FILE="$PIXI_PROJECT_ROOT/.pixi/envs/$PIXI_ENVIRONMENT_NAME/ssl/cacert.pem" }

[tool.pixi.feature.dev.target.linux-64.activation.env]
PATH="$PIXI_PROJECT_ROOT/src/$PIXI_PROJECT_NAME:$PATH"
PYTHONPATH="$PIXI_PROJECT_ROOT/src:$PYTHONPATH"
SSL_CERT_FILE="$PIXI_PROJECT_ROOT/.pixi/envs/$PIXI_ENVIRONMENT_NAME/ssl/cacert.pem"

[tool.pixi.feature.dev.target.osx-arm64.activation.env]
PATH="$PIXI_PROJECT_ROOT/src/$PIXI_PROJECT_NAME:$PATH"
PYTHONPATH="$PIXI_PROJECT_ROOT/src:$PYTHONPATH"

# +--------------------------------------------------------------------+
# | Global dependencies
# +--------------------------------------------------------------------+
[tool.pixi.dependencies]
setuptools = "*"
pip = "*"
hatchling = "*"
ipython = "*"
numpy = ">=1.20,<1.24"
# scipy = ">=1.9.1" # Recommended: 1.1.0
scikit-image = ">=0.19,<0.20"
imgaug = ">=0.4.0"
py-opencv = "*"
pandas = ">=1.1.5"
tqdm = ">=4.56.0"

# +--------------------------------------------------------------------+
# | Feature tensorflow-2-19
# +--------------------------------------------------------------------+
[tool.pixi.feature.tensorflow]
channels = ["nvidia/label/cuda-12.8.*", "conda-forge"] 
system-requirements = {cuda = "12.8"}
platforms = ["linux-64", "osx-arm64"] 

# | Linux specific dependencies for tensorflow 2.19
# +--------------------------------------------------------------------+
[tool.pixi.feature.tensorflow.target.linux-64.dependencies]
python = "3.11.*"
tensorflow = "2.19.*"
keras = "*"

# | MacOS specific dependencies
# +--------------------------------------------------------------------+
[tool.pixi.feature.tensorflow.target.osx-arm64.dependencies]
tensorflow = ">=2.9"
keras = ">=2.9"

# +--------------------------------------------------------------------+
# | Feature tensorflow-2-15-0
# +--------------------------------------------------------------------+
[tool.pixi.feature.tensorflow-2-15-0]
channels = ["nvidia/label/cuda-12.2.2", "conda-forge"] 
platforms = ["linux-64"]
system-requirements = {cuda = "12.2"}

[tool.pixi.feature.tensorflow-2-15-0.target.linux-64.dependencies]
python = "3.10.*"
cuda-toolkit = "12.2.2.*"
cudnn = "*"
tensorflow-gpu = "2.15.0.*"

[tool.pixi.environments]
default = ["tensorflow", "dev"]
tensorflow = ["tensorflow"]
tensorflow-2-15-0 = ["tensorflow-2-15-0"]

# +--------------------------------------------------------------------+
# | Tasks
# +--------------------------------------------------------------------+
[tool.pixi.tasks]
check-gpus = "python -c 'import tensorflow as tf; print(tf.config.list_physical_devices(\"GPU\"))'"
build = "hatchling build"
install = {cmd = "pip install --force-reinstall dist/*.whl", depends-on = ["build"]}
